--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ ext {
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-config-server'
+    implementation 'org.yaml:snakeyaml:2.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
